# mapers

./: .env.example  .gitignore  README.md  ROMS_SYSTEM_GUIDE.md  TROUBLESHOOTING.md  docker-compose.yml  start.ps1
backend/: Cargo.toml  Dockerfile
backend/src/: emulators.rs  games.rs  main.rs  rom_scanner.rs  roms.rs  sessions.rs
database/: Dockerfile  init.sql
emulator-service/: Dockerfile  retroarch-bridge.py  retroarch.cfg
emulators/bizhawk/: Dockerfile  start.sh
emulators/citra/: Dockerfile  start.sh
emulators/dolphin/: Dockerfile  start.sh
emulators/emulatorjs/: Dockerfile
emulators/flycast/: Dockerfile  start.sh
emulators/pcsx2/: Dockerfile  start.sh
emulators/ppsspp/: Dockerfile  start.sh
emulators/retroarch/: Dockerfile
emulators/rpcs3/: Dockerfile  start.sh
emulators/ryujinx/: Dockerfile  start.sh
emulators/vita3k/: Dockerfile  start.sh
emulators/yuzu/: Dockerfile  start.sh
frontend/: COMPONENT_STRUCTURE.md  Dockerfile  FRONTEND_IMPROVEMENTS.md  QUICK_START.md  README_MODERNIZATION.md  package.json  start.sh
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ConnectedUsers.css  ConnectedUsers.tsx  GameCard.css  GameCard.tsx  GameLibrary.css  GameLibrary.tsx  LoginModal.css  LoginModal.tsx  RomUpload.css  RomUpload.tsx
frontend/src/services/: api.ts
roms/: .gitkeep  README.md
